Business logics are implemented. Tests on local dev env passed. (#47)
* make a clean diff

* fix testcases
